fix bug where subtitle tab is no longer working + fix subtitle alignment for 16:9

--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -244,7 +244,7 @@ div#media_container {
 }
 
 #river_player.show div#media {
-  margin-top: -65px;
+  margin-top: 0px;
   width: 780px;
   height: 600px;
 }
